<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/tv_distance_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" 
        android:layout_alignParentTop="true" />
    
    
    <RadioGroup
        android:id="@+id/rg_modes" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        
        <RadioButton android:id="@+id/rb_driving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:text="@string/str_rb_driving"
            android:checked="true" />
        
        <RadioButton android:id="@+id/rb_bicycling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:text="@string/str_rb_bicycling" />
        
        <RadioButton android:id="@+id/rb_walking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:text="@string/str_rb_walking" />
        
        
    </RadioGroup>
    
    <fragment 
        android:id="@+id/map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        class="com.google.android.gms.maps.SupportMapFragment" 
        android:layout_above="@id/rg_modes"
        android:layout_below="@id/tv_distance_time"/>

    <Button
        android:id="@+id/btn_draw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tv_distance_time"
        android:text="@string/str_btn_draw" />

</RelativeLayout>